# spacy-curated-transformers

./: MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: cibuildwheel.yml  publish_pypi.yml  test.yml
project/: README.md  project.yml
project/configs/: layer-weighting.cfg  no-layer-weighting.cfg
spacy_curated_transformers/: errors.py  schedules.py  util.py
spacy_curated_transformers/cli/: debug_pieces.py  fill_config_transformer.py
spacy_curated_transformers/models/: __init__.py  architectures.py  hf_loader.py  listeners.py  output.py  pooling.py  remove_eos_bos.py  scalar_weight.py  types.py  with_non_ws_tokens.py  with_strided_spans.py
spacy_curated_transformers/models/pytorch/: __init__.py  scalar_weight.py
spacy_curated_transformers/pipeline/: __init__.py  transformer.py
spacy_curated_transformers/tests/: conftest.py  test_cli_app.py  test_registry.py  test_schedules.py  test_torchscript_wrapper.py  util.py
spacy_curated_transformers/tests/models/: test_hf_model.py  test_listeners.py  test_pooling.py  test_scalar_weight.py  test_transformer_model.py  test_with_non_ws_tokens.py  test_with_strided_spans.py
spacy_curated_transformers/tests/pipeline/: test_transformer.py
spacy_curated_transformers/tests/tokenization/: test_bbpe_encoder.py  test_char_encoder.py  test_registry.py  test_sentencepiece_encoder.py  test_wordpiece_encoder.py  test_xlmr_adapter.py
spacy_curated_transformers/tokenization/: bbpe_encoder.py  char_encoder.py  hf_loader.py  sentencepiece_adapters.py  sentencepiece_encoder.py  types.py  wordpiece_encoder.py
